@@ -18,6 +18,9 @@ Release 1.3-SNAPSHOT
 * History buffer numbers are now numbered oldest to newest, so that 
   the buffer number for a given buffer will not change until the 
   session ends or the buffer is removed from history.
+* Added ${scale} and changed the definition of ${precision}. These
+  two values now work together when displaying floating point
+  values exactly as one would expect them to.
 * Added ${querytime} configuration property to suppress display of
   query timing information. 
 * Added dist-sparc-sol build target. This provides a .tar.gz file
@@ -25,6 +28,8 @@ Release 1.3-SNAPSHOT
   the build platform having readline-5.x installed
 * Added support for SQLXML datatype
 * Enabled support for "N" types, NVARCHAR(), NCHAR(), etc. 
+* Fixed recognition of Oracle NUMBER type when it is not qualified with
+  a specific precision and scale.
 * Fixed case where stored procedures with multiple result sets would
   occasionally not show all of the available result sets. Unfortunately,
   this problem still persists in the SQL Server 2005 driver, but I think
